# WordClassifier

./: .gitignore  README.md  package.json  report.json
analyzer/: CMakeLists.txt  main.cpp
analyzer/filemanager/: combination_filewriter.tpp  constants.h  converter.cpp  converter.h  endings_analyzer.h  endings_analyzer.tpp  file_utils.cpp  file_utils.h  start_analyzer.h  start_analyzer.tpp  tree_file.cpp  tree_file.h  tree_file_elimination.cpp  tree_file_elimination.h  tree_file_elimination.tpp  tree_file_strength.cpp  tree_file_strength.h  tree_file_strength.tpp
app/: brain.js  classifier.js  classifier.min.js  classifier_eliminator.js  classifier_percentage.js  collect.js  retrieve.js  test.js
resources/: char_occurence.csv  char_occurence.io  sample.io  sample_elimination.io  sample_elimination_2d.csv  sample_elimination_2d.io  sample_elimination_3d.csv  sample_elimination_3d.io  sample_elimination_4d.io  sample_elimination_all.io  sample_ending_elimination_2d.csv  sample_ending_elimination_2d.io  sample_ending_elimination_3d.csv  sample_ending_elimination_3d.io  sample_start_elimination_2d.csv  sample_start_elimination_2d.io  sample_start_elimination_3d.csv  sample_start_elimination_3d.io  test.json  wordsV2.txt
shared_output/NORM_-1_GLOBALT_0_STARTT_0_ENDT_0/: sample_elimination_2d.csv  sample_elimination_2d.io  sample_elimination_3d.csv  sample_elimination_3d.io  sample_elimination_4d.csv  sample_elimination_4d.io  sample_ending_elimination_2d.csv  sample_ending_elimination_2d.io  sample_ending_elimination_3d.csv  sample_ending_elimination_3d.io  sample_ending_elimination_4d.csv  sample_ending_elimination_4d.io  sample_start_elimination_2d.csv  sample_start_elimination_2d.io  sample_start_elimination_3d.csv  sample_start_elimination_3d.io  sample_start_elimination_4d.csv  sample_start_elimination_4d.io
shared_output/NORM_-1_GLOBALT_3_STARTT_5_ENDT_19/: sample_elimination_3d.io  sample_ending_elimination_2d.io  sample_start_elimination_2d.io
submission/: test.js
